@@ -8,5 +8,10 @@ this repository contains the full copyright notices and license terms. -->
             <field name="inherit" ref="offered.product_view_form"/>
             <field name="name">product_form</field>
         </record>
+        <record model="ir.ui.view" id="contract_data_rule_view_form">
+            <field name="model">contract.data.rule</field>
+            <field name="type">form</field>
+            <field name="name">contract_data_rule_form</field>
+        </record>
     </data>
 </tryton>
