@@ -42,8 +42,7 @@ class ContractGroupSubscribe(ContractSubscribe):
             ContractGroupSubscribe, self).init_main_object_from_process(
             obj, process_param)
         if res:
-            obj.init_from_product(
-                process_param.product, process_param.effective_date)
+            obj.init_from_product(process_param.product)
             obj.subscriber = process_param.party
             obj.is_group = True
         return res, err
